# NewRow-Print

./: .evolve.jsonl  ReadMe.md  donutloop.aln  neuro-cap.aln  neuroprint_view.aln  policy_neuro_dna_eligibility.aln  policy_tier1_neuromorph_foundation.aln
config/: nature-unfair_drain-config.aln
crates/fairness/src/: unfair_drain.rs
crates/hivemind-fence/src/: logging.rs
crates/nanosafety/src/: nano_risk_guard.rs
crates/neuromorphic-bioscale-spec/src/: neuro_print.rs
crates/neuroprint-core/src/: neuroprint.rs
crates/neuroprint_core/: Cargo.toml  nature-predicates-config.aln  tree-assets-mapping.aln
crates/neuroprint_core/src/: lib.rs  log.rs  nature.rs
crates/nr_taint_macros/: Cargo.toml
crates/nr_taint_macros/src/: lib.rs
crates/policy_engine/src/: hivemind_fence_log.rs  hivemind_fence_view.rs
crates/policyengine/src/: aln_core.rs  biophysical_consensus.rs  (+2 more)
docs/: From Intuition to Algorithm_ Validating Fairness a.md  NewRow-Print.md  newrow-print-lexicon.md
hivemind-fence/src/: lib.rs
logs/: neuroprint_prep-week1.jsonl
logs/schema/: fairness-unfair_drain.schema.json
neuroprint-core/src/: nature_recovery.rs
policies/: hivemind-fence-worm-log.v1.json
policy/: REVERSAL-POLICY-ZERO.aln  biophysical_envelope_spec.aln  biotree-diagnostics.aln  knowledge-object-pacing.aln  neuromorph_policy_engine.aln  policy-taint-spec.aln
policy/envelopes/: cognitive_load_envelope_v1.aln  sleep_arousal_envelope_v1.aln
policyengine/src/: capability_guard.rs  reversalconditions.rs  taint_spec.rs
src/safest_first_policy/: aln_schema.rs
(+3 files in other folders)
