[package]
name = "neuroprint_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# These are expected to come from your existing workspace:
capability_core = { path = "../capability_core" }
envelope_core   = { path = "../envelope_core" }
roh_model       = { path = "../roh_model" }
aln_core        = { path = "../aln_core" }
